--- a/css/main.css
+++ b/css/main.css
@@ -3,11 +3,11 @@
 @tailwind components;
 @tailwind utilities;
 *,
-html,
-body {
+::before,
+::after,
+body,
+div {
   box-sizing: border-box;
-  margin: 0;
-  padding: 0;
 }
 :root {
   --aleo-dark: #12141d;
@@ -18,7 +18,7 @@ body {
   --aleo-green: #18e48f;
   --aleo-blue: #00c0f9;
   --aleo-lightblue: #01eaef;
-  --aleo-transparent: rgba(0, 0, 0, 0.5);
+  --aleo-transparent: rgba(0, 0, 0, 0.75);
   --aleo-transparent-lightblue: rgba(1, 234, 239, 0.25);
   --aleo-transparent-blue: rgba(0, 192, 249, 0.25);
   --aleo-transparent-green: rgba(24, 228, 143, 0.25);
@@ -33,32 +33,82 @@ body {
   background-size: cover;
 }
 body {
-  @apply text-white relative;
+  @apply text-white relative overflow-x-hidden px-5 py-32 md:py-10 md:px-32;
 }
 nav {
-  @apply absolute top-0 left-0 right-0 p-5 lg:py-7 lg:px-10 flex justify-between;
+  @apply absolute top-0 left-0 right-0  md:py-7 p-5 md:px-10 flex justify-between;
 }
-nav .logo {
-  @apply w-36 lg:w-52;
+nav ul a {
+  @apply max-w-[12rem];
+}
+a:not(.btn-light) {
+  @apply transition-all duration-300 hover:text-aleo-blue;
+}
+h2 {
+  @apply text-xl text-center;
 }
 footer {
   @apply text-center text-aleo-light py-4 absolute bottom-0 left-0 right-0;
 }
 .nav-options {
-  @apply hidden lg:flex gap-10 items-center;
+  @apply flex flex-col gap-8 px-10 absolute top-0 left-0 right-0 w-screen h-screen z-10 bg-aleo-dark py-20 items-center lg:w-auto lg:h-auto lg:relative lg:flex-row lg:p-0 lg:items-center lg:bg-transparent lg:gap-10;
+}
+.overflow {
+  @apply overflow-y-hidden;
+}
+.menu-trigger {
+  @apply lg:hidden z-50;
+}
+.show-menu {
+  @apply opacity-100 pointer-events-auto;
+}
+.hide-menu {
+  @apply opacity-0 pointer-events-none lg:opacity-100 lg:pointer-events-auto;
+}
+.logo {
+  @apply w-36 md:w-52;
 }
 .landing {
-  @apply lg:flex gap-52 justify-between items-center py-32 px-6 lg:pl-40 lg:pr-52 w-screen  lg:h-screen;
+  @apply md:flex gap-32 justify-center items-center md:h-screen;
 }
 .title {
-  @apply text-5xl lg:text-6xl font-bold shadow-lg;
+  @apply text-5xl md:text-6xl font-bold shadow-lg;
 }
 .subtitle {
-  @apply text-xl lg:text-2xl my-4 font-extralight max-w-[40rem] shadow-lg;
+  @apply text-xl md:text-2xl my-4 font-extralight max-w-[40rem] shadow-lg;
 }
 .btn-light {
   @apply p-3 rounded-lg text-aleo-dark bg-aleo-blue hover:shadow-[0px_0px_8px_1px] hover:shadow-aleo-lightblue transition-all duration-300;
 }
 .my-atropos {
-  @apply w-1/4 min-w-[20rem] my-10 lg:my-0 mx-auto;
+  @apply w-1/4 min-w-[20rem] mx-auto my-10;
+}
+.soon {
+  @apply grid grid-cols-2 md:grid-cols-4 gap-10 md:gap-20 justify-center;
+}
+.soon div {
+  @apply flex flex-col justify-center items-center gap-5;
+}
+.soon img {
+  @apply w-10;
+}
+.features {
+  @apply grid grid-cols-2 gap-5 my-10 items-center;
+}
+.feature {
+  @apply p-5 text-center;
+}
+h2 {
+  padding: 0.5rem 2rem;
+  border-bottom-width: 2px;
+  border-bottom-style: solid;
+  border-image: linear-gradient(to right, var(--aleo-blue), rgb(4, 34, 151), var(--aleo-blue)) 1;
+  border-radius: 2rem;
+  -webkit-border-radius: 2rem;
+  -moz-border-radius: 2rem;
+  -ms-border-radius: 2rem;
+  -o-border-radius: 2rem;
+}
+.feature video {
+  @apply transform -translate-x-1/2 -translate-y-1/2 absolute top-1/2 left-0 w-2/3 transition-opacity duration-300;
 }
