--- a/css/main.css
+++ b/css/main.css
@@ -26,8 +26,8 @@ div {
 html {
   background-color: #000;
 }
-body {
-  background-image: url("../images/background.jpg");
+.landing {
+  background-image: url("../images/background.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
